--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,22 +12,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-01 Fri 14:32]
+#+CAPTION: Clock summary at [2019-03-01 Fri 14:49]
 | <75>                                                |         |       |      |       |
 | Headline                                            | Time    |       |      |     % |
 |-----------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                        | *14:53* |       |      | 100.0 |
+| *Total time*                                        | *15:09* |       |      | 100.0 |
 |-----------------------------------------------------+---------+-------+------+-------|
-| Stories                                             | 14:53   |       |      | 100.0 |
-| Active                                              |         | 14:53 |      | 100.0 |
-| Edit release notes for previous sprint              |         |       | 1:27 |   9.7 |
-| Sprint and product backlog grooming                 |         |       | 0:42 |   4.7 |
-| Implement text model generation chain in generation |         |       | 3:45 |  25.2 |
-| Move generation model out of coding                 |         |       | 4:22 |  29.3 |
-| Rename endomodel to just model                      |         |       | 2:11 |  14.7 |
+| Stories                                             | 15:09   |       |      | 100.0 |
+| Active                                              |         | 15:09 |      | 100.0 |
+| Edit release notes for previous sprint              |         |       | 1:27 |   9.6 |
+| Sprint and product backlog grooming                 |         |       | 0:42 |   4.6 |
+| Implement text model generation chain in generation |         |       | 3:45 |  24.8 |
+| Move generation model out of coding                 |         |       | 4:22 |  28.8 |
+| Rename endomodel to just model                      |         |       | 2:11 |  14.4 |
 | Remove exomodel remnants                            |         |       | 0:03 |   0.3 |
 | Try to fix valgrind warning on =find_files=         |         |       | 0:20 |   2.2 |
-| Move injection processing out of coding             |         |       | 2:03 |  13.8 |
+| Move injection processing out of coding             |         |       | 2:19 |  15.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -318,6 +318,7 @@ We seem to be doing something wrong with directory iterators:
 
 *** STARTED Move injection processing out of coding                   :story:
     :LOGBOOK:
+    CLOCK: [2019-03-01 Fri 14:33]--[2019-03-01 Fri 14:49] =>  0:16
     CLOCK: [2019-03-01 Fri 12:39]--[2019-03-01 Fri 14:32] =>  1:53
     CLOCK: [2019-03-01 Fri 11:37]--[2019-03-01 Fri 11:43] =>  0:06
     CLOCK: [2019-03-01 Fri 11:32]--[2019-03-01 Fri 11:36] =>  0:04
