--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,22 +12,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-01 Fri 16:48]
+#+CAPTION: Clock summary at [2019-03-01 Fri 17:02]
 | <75>                                                |         |       |      |       |
 | Headline                                            | Time    |       |      |     % |
 |-----------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                        | *17:05* |       |      | 100.0 |
+| *Total time*                                        | *17:19* |       |      | 100.0 |
 |-----------------------------------------------------+---------+-------+------+-------|
-| Stories                                             | 17:05   |       |      | 100.0 |
-| Active                                              |         | 17:05 |      | 100.0 |
-| Edit release notes for previous sprint              |         |       | 1:27 |   8.5 |
-| Sprint and product backlog grooming                 |         |       | 0:42 |   4.1 |
-| Implement text model generation chain in generation |         |       | 3:45 |  22.0 |
-| Move generation model out of coding                 |         |       | 4:22 |  25.6 |
-| Rename endomodel to just model                      |         |       | 2:11 |  12.8 |
+| Stories                                             | 17:19   |       |      | 100.0 |
+| Active                                              |         | 17:19 |      | 100.0 |
+| Edit release notes for previous sprint              |         |       | 1:27 |   8.4 |
+| Sprint and product backlog grooming                 |         |       | 0:42 |   4.0 |
+| Implement text model generation chain in generation |         |       | 3:45 |  21.7 |
+| Move generation model out of coding                 |         |       | 4:22 |  25.2 |
+| Rename endomodel to just model                      |         |       | 2:11 |  12.6 |
 | Remove exomodel remnants                            |         |       | 0:03 |   0.3 |
-| Try to fix valgrind warning on =find_files=         |         |       | 0:20 |   2.0 |
-| Move injection processing out of coding             |         |       | 4:15 |  24.9 |
+| Try to fix valgrind warning on =find_files=         |         |       | 0:20 |   1.9 |
+| Move injection processing out of coding             |         |       | 4:29 |  25.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -318,6 +318,7 @@ We seem to be doing something wrong with directory iterators:
 
 *** STARTED Move injection processing out of coding                   :story:
     :LOGBOOK:
+    CLOCK: [2019-03-01 Fri 16:48]--[2019-03-01 Fri 17:02] =>  0:14
     CLOCK: [2019-03-01 Fri 14:55]--[2019-03-01 Fri 16:47] =>  1:52
     CLOCK: [2019-03-01 Fri 14:50]--[2019-03-01 Fri 14:54] =>  0:04
     CLOCK: [2019-03-01 Fri 14:33]--[2019-03-01 Fri 14:49] =>  0:16
