--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,23 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-01 Fri 18:02]
-| <75>                                                |         |       |      |       |
-| Headline                                            | Time    |       |      |     % |
-|-----------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                        | *18:15* |       |      | 100.0 |
-|-----------------------------------------------------+---------+-------+------+-------|
-| Stories                                             | 18:15   |       |      | 100.0 |
-| Active                                              |         | 18:15 |      | 100.0 |
-| Edit release notes for previous sprint              |         |       | 1:27 |   7.9 |
-| Sprint and product backlog grooming                 |         |       | 0:42 |   3.8 |
-| Implement text model generation chain in generation |         |       | 3:45 |  20.5 |
-| Move generation model out of coding                 |         |       | 4:22 |  23.9 |
-| Rename endomodel to just model                      |         |       | 2:11 |  12.0 |
-| Remove exomodel remnants                            |         |       | 0:03 |   0.3 |
-| Try to fix valgrind warning on =find_files=         |         |       | 0:20 |   1.8 |
-| Move injection processing out of coding             |         |       | 5:05 |  27.9 |
-| Split annotations processing into two phases        |         |       | 0:20 |   1.8 |
+#+CAPTION: Clock summary at [2019-03-01 Fri 22:39]
+| <75>                                                     |         |       |      |       |
+| Headline                                                 | Time    |       |      |     % |
+|----------------------------------------------------------+---------+-------+------+-------|
+| *Total time*                                             | *20:19* |       |      | 100.0 |
+|----------------------------------------------------------+---------+-------+------+-------|
+| Stories                                                  | 20:19   |       |      | 100.0 |
+| Active                                                   |         | 20:19 |      | 100.0 |
+| Edit release notes for previous sprint                   |         |       | 1:27 |   7.1 |
+| Sprint and product backlog grooming                      |         |       | 0:42 |   3.4 |
+| Implement text model generation chain in generation      |         |       | 3:45 |  18.5 |
+| Move generation model out of coding                      |         |       | 4:22 |  21.5 |
+| Rename endomodel to just model                           |         |       | 2:11 |  10.7 |
+| Remove exomodel remnants                                 |         |       | 0:03 |   0.2 |
+| Consider adding a dot graph of the transforms to probing |         |       | 1:47 |   8.8 |
+| Try to fix valgrind warning on =find_files=              |         |       | 0:20 |   1.6 |
+| Move injection processing out of coding                  |         |       | 5:05 |  25.0 |
+| Split annotations processing into two phases             |         |       | 0:37 |   3.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -300,6 +301,37 @@ Add extension to log file name so that we can see both Dia and JSON
 logs at the same time. At present, one overwrites the other because we
 do not have the frontend (e.g. the extension) on the log file name.
 
+*** COMPLETED Consider adding a dot graph of the transforms to probing :story:
+    CLOSED: [2019-03-01 Fri 22:30]
+    :LOGBOOK:
+    CLOCK: [2019-03-01 Fri 22:31]--[2019-03-01 Fri 22:39] =>  0:08
+    CLOCK: [2019-03-01 Fri 20:51]--[2019-03-01 Fri 22:30] =>  1:39
+    :END:
+
+At present it is very difficult to figure out the composition of the
+chains and transforms. It would be great if we could visualise them as
+a graph using dot/graphviz. The notation looks quite straightforward
+and since we've already built the graph in tracing, its probably just
+a case of transforming it.
+
+We can just add a new format: dot. Then teach the metrics printer to
+output in it. Ideally we should find a way to put at least the timings
+on the graph as well. We should take this opportunity to use the
+tracing formats directly in metrics printer rather than the "use
+org-mode" hack we do at present.
+
+Generate DOT:
+
+: ./masd.dogen.cli generate -t ~/Development/DomainDrivenConsulting/masd/dogen/integration/projects/masd.dogen.models/dia/hello_world.dia --log-enabled --log-level trace --tracing-enabled --tracing-level detail --tracing-format graphviz --tracing-guids-enabled
+
+Convert to PDF:
+
+: dot -Tpdf transform_stats.dot -o output.pdf
+
+Links:
+
+- [[https://renenyffenegger.ch/notes/tools/Graphviz/examples/index][Graphviz (dot) examples]]
+
 *** STARTED Try to fix valgrind warning on =find_files=               :story:
     :LOGBOOK:
     CLOCK: [2019-02-27 Wed 17:25]--[2019-02-27 Wed 17:45] =>  0:20
@@ -359,6 +391,7 @@ Notes:
 
 *** STARTED Split annotations processing into two phases              :story:
     :LOGBOOK:
+    CLOCK: [2019-03-01 Fri 18:01]--[2019-03-01 Fri 18:18] =>  0:17
     CLOCK: [2019-03-01 Fri 17:40]--[2019-03-01 Fri 18:00] =>  0:20
     :END:
 
@@ -508,24 +541,6 @@ Notes:
 - add model set into coding.
 - add a new model: coding.injection. Create a class that converts from
   one model set to another.
-
-*** Consider adding a dot graph of the transforms to probing          :story:
-
-At present it is very difficult to figure out the composition of the
-chains and transforms. It would be great if we could visualise them as
-a graph using dot/graphviz. The notation looks quite straightforward
-and since we've already built the graph in tracing, its probably just
-a case of transforming it.
-
-We can just add a new format: dot. Then teach the metrics printer to
-output in it. Ideally we should find a way to put at least the timings
-on the graph as well. We should take this opportunity to use the
-tracing formats directly in metrics printer rather than the "use
-org-mode" hack we do at present.
-
-Links:
-
-- [[https://renenyffenegger.ch/notes/tools/Graphviz/examples/index][Graphviz (dot) examples]]
 
 *** Consider renaming log level =trace=                               :story:
 
