--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-02 Sat 07:08]
+#+CAPTION: Clock summary at [2019-03-02 Sat 07:18]
 | <75>                                                     |         |       |      |       |
 | Headline                                                 | Time    |       |      |     % |
 |----------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                             | *20:56* |       |      | 100.0 |
+| *Total time*                                             | *21:05* |       |      | 100.0 |
 |----------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                  | 20:56   |       |      | 100.0 |
-| Active                                                   |         | 20:56 |      | 100.0 |
+| Stories                                                  | 21:05   |       |      | 100.0 |
+| Active                                                   |         | 21:05 |      | 100.0 |
 | Edit release notes for previous sprint                   |         |       | 1:27 |   6.9 |
 | Sprint and product backlog grooming                      |         |       | 0:42 |   3.3 |
-| Implement text model generation chain in generation      |         |       | 3:45 |  17.9 |
-| Move generation model out of coding                      |         |       | 4:22 |  20.9 |
+| Implement text model generation chain in generation      |         |       | 3:45 |  17.8 |
+| Move generation model out of coding                      |         |       | 4:22 |  20.7 |
 | Rename endomodel to just model                           |         |       | 2:11 |  10.4 |
 | Remove exomodel remnants                                 |         |       | 0:03 |   0.2 |
 | Consider adding a dot graph of the transforms to probing |         |       | 1:47 |   8.5 |
 | Try to fix valgrind warning on =find_files=              |         |       | 0:20 |   1.6 |
-| Move injection processing out of coding                  |         |       | 5:05 |  24.3 |
-| Split annotations processing into two phases             |         |       | 1:14 |   5.9 |
+| Move injection processing out of coding                  |         |       | 5:05 |  24.1 |
+| Split annotations processing into two phases             |         |       | 1:23 |   6.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -391,6 +391,7 @@ Notes:
 
 *** STARTED Split annotations processing into two phases              :story:
     :LOGBOOK:
+    CLOCK: [2019-03-02 Sat 07:09]--[2019-03-02 Sat 07:18] =>  0:09
     CLOCK: [2019-03-02 Sat 06:31]--[2019-03-02 Sat 07:08] =>  0:37
     CLOCK: [2019-03-01 Fri 18:01]--[2019-03-01 Fri 18:18] =>  0:17
     CLOCK: [2019-03-01 Fri 17:40]--[2019-03-01 Fri 18:00] =>  0:20
