--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-02 Sat 07:18]
+#+CAPTION: Clock summary at [2019-03-02 Sat 08:22]
 | <75>                                                     |         |       |      |       |
 | Headline                                                 | Time    |       |      |     % |
 |----------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                             | *21:05* |       |      | 100.0 |
+| *Total time*                                             | *22:05* |       |      | 100.0 |
 |----------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                  | 21:05   |       |      | 100.0 |
-| Active                                                   |         | 21:05 |      | 100.0 |
-| Edit release notes for previous sprint                   |         |       | 1:27 |   6.9 |
-| Sprint and product backlog grooming                      |         |       | 0:42 |   3.3 |
-| Implement text model generation chain in generation      |         |       | 3:45 |  17.8 |
-| Move generation model out of coding                      |         |       | 4:22 |  20.7 |
-| Rename endomodel to just model                           |         |       | 2:11 |  10.4 |
+| Stories                                                  | 22:05   |       |      | 100.0 |
+| Active                                                   |         | 22:05 |      | 100.0 |
+| Edit release notes for previous sprint                   |         |       | 1:27 |   6.6 |
+| Sprint and product backlog grooming                      |         |       | 0:42 |   3.2 |
+| Implement text model generation chain in generation      |         |       | 3:45 |  17.0 |
+| Move generation model out of coding                      |         |       | 4:22 |  19.8 |
+| Rename endomodel to just model                           |         |       | 2:11 |   9.9 |
 | Remove exomodel remnants                                 |         |       | 0:03 |   0.2 |
-| Consider adding a dot graph of the transforms to probing |         |       | 1:47 |   8.5 |
-| Try to fix valgrind warning on =find_files=              |         |       | 0:20 |   1.6 |
-| Move injection processing out of coding                  |         |       | 5:05 |  24.1 |
-| Split annotations processing into two phases             |         |       | 1:23 |   6.6 |
+| Consider adding a dot graph of the transforms to probing |         |       | 1:47 |   8.1 |
+| Try to fix valgrind warning on =find_files=              |         |       | 0:20 |   1.5 |
+| Move injection processing out of coding                  |         |       | 5:05 |  23.0 |
+| Split annotations processing into two phases             |         |       | 2:23 |  10.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -391,6 +391,8 @@ Notes:
 
 *** STARTED Split annotations processing into two phases              :story:
     :LOGBOOK:
+    CLOCK: [2019-03-02 Sat 08:01]--[2019-03-02 Sat 08:20] =>  0:19
+    CLOCK: [2019-03-02 Sat 07:19]--[2019-03-02 Sat 08:00] =>  0:41
     CLOCK: [2019-03-02 Sat 07:09]--[2019-03-02 Sat 07:18] =>  0:09
     CLOCK: [2019-03-02 Sat 06:31]--[2019-03-02 Sat 07:08] =>  0:37
     CLOCK: [2019-03-01 Fri 18:01]--[2019-03-01 Fri 18:18] =>  0:17
@@ -433,6 +435,12 @@ steps:
   before we perform profile expansion (so that we can locate the
   profiles first amongst the meta-types and perform their
   initialisation).
+
+Problems:
+
+- something is not quite right with stitch expansion; we used to have
+  profile expansion before (somehow) but now it does not work any
+  more.
 
 Tasks:
 
