--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-02 Sat 08:22]
+#+CAPTION: Clock summary at [2019-03-02 Sat 15:11]
 | <75>                                                     |         |       |      |       |
 | Headline                                                 | Time    |       |      |     % |
 |----------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                             | *22:05* |       |      | 100.0 |
+| *Total time*                                             | *22:15* |       |      | 100.0 |
 |----------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                  | 22:05   |       |      | 100.0 |
-| Active                                                   |         | 22:05 |      | 100.0 |
-| Edit release notes for previous sprint                   |         |       | 1:27 |   6.6 |
-| Sprint and product backlog grooming                      |         |       | 0:42 |   3.2 |
-| Implement text model generation chain in generation      |         |       | 3:45 |  17.0 |
-| Move generation model out of coding                      |         |       | 4:22 |  19.8 |
-| Rename endomodel to just model                           |         |       | 2:11 |   9.9 |
+| Stories                                                  | 22:15   |       |      | 100.0 |
+| Active                                                   |         | 22:15 |      | 100.0 |
+| Edit release notes for previous sprint                   |         |       | 1:27 |   6.5 |
+| Sprint and product backlog grooming                      |         |       | 0:42 |   3.1 |
+| Implement text model generation chain in generation      |         |       | 3:45 |  16.9 |
+| Move generation model out of coding                      |         |       | 4:22 |  19.6 |
+| Rename endomodel to just model                           |         |       | 2:11 |   9.8 |
 | Remove exomodel remnants                                 |         |       | 0:03 |   0.2 |
-| Consider adding a dot graph of the transforms to probing |         |       | 1:47 |   8.1 |
+| Consider adding a dot graph of the transforms to probing |         |       | 1:47 |   8.0 |
 | Try to fix valgrind warning on =find_files=              |         |       | 0:20 |   1.5 |
-| Move injection processing out of coding                  |         |       | 5:05 |  23.0 |
-| Split annotations processing into two phases             |         |       | 2:23 |  10.8 |
+| Move injection processing out of coding                  |         |       | 5:05 |  22.8 |
+| Split annotations processing into two phases             |         |       | 2:33 |  11.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -391,6 +391,7 @@ Notes:
 
 *** STARTED Split annotations processing into two phases              :story:
     :LOGBOOK:
+    CLOCK: [2019-03-02 Sat 15:01]--[2019-03-02 Sat 15:11] =>  0:10
     CLOCK: [2019-03-02 Sat 08:01]--[2019-03-02 Sat 08:20] =>  0:19
     CLOCK: [2019-03-02 Sat 07:19]--[2019-03-02 Sat 08:00] =>  0:41
     CLOCK: [2019-03-02 Sat 07:09]--[2019-03-02 Sat 07:18] =>  0:09
